# NDK_presentation

./: NDK.docx  NDK.pptx  NDK_SoftServeTheme.pptx  NDK_copy.pptx
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Class1.cpp  Class1.h  Class2.cpp  Class2.h  Exception.cpp  Exception.h  JNIBridge.cpp  Logger.h  NativeThread.cpp  NativeThread.h  ReferenceTable.cpp  ReferenceTable.h  native-lib.cpp
app/src/main/java/com/softserveinc/ndkexampledemo/: Callback.java  CaseItem.java  CaseItemAdapter.java  JNIBridge.java  MainActivity.java
app/src/main/java/com/softserveinc/ndkexampledemo/controller/: Callback.java  CaseItem.java  CaseItemAdapter.java
app/src/main/res/layout/: activity_main.xml  case_item.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
tools/: backtrace.txt
tools/release_apk/: app-release.apk  output.json
